--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:exported="true">
         </service>
 
-        <activity android:name=".DayActivity">
+        <activity android:name="com.example.waterBalance.DayActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
