--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:permission="">
         </service>
 
-        <activity android:name="com.example.waterBalance.DayActivity"
+        <activity android:name="com.example.waterBalance.MainMenuActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +31,8 @@
         <activity android:name=".MaleBodyVisualActivity" />
         <activity android:name=".GraphActivity" />
         <activity android:name=".InfoActivity" />
+        <activity android:name=".DayActivity"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
